fixed top 5 section alignment

--- a/apps/app/src/components/TopCompaniesSection/TopCompaniesSection.module.scss
+++ b/apps/app/src/components/TopCompaniesSection/TopCompaniesSection.module.scss
@@ -5,11 +5,12 @@
   display: flex;
   flex-direction: column;
 
-  @media screen and (min-width: 920px) {
-    display: grid;
-    max-width: 970px;
+  @media screen and (min-width: $breakpoint-tablet) {
+    //display: grid;
+    max-width: 422px;
+    padding: 48px 0;
     margin: 0 auto;
-    grid-template-columns: 420px 1fr;
+    //grid-template-columns: 420px 1fr;
     gap: 32px;
   }
 
